Update docker setup

--- a/src/backend/Dockerfile.chargefw2
+++ b/src/backend/Dockerfile.chargefw2
@@ -36,11 +36,14 @@ RUN cd /ChargeFW2 && \
     make install && \
     cd /
 
-COPY --from=ubuntu:24.04 /usr/lib/x86_64-linux-gnu/libgomp.so.1* \
+FROM ubuntu:24.04
+COPY --from=build /ChargeFW2/ /ChargeFW2
+COPY --from=build /usr/lib/x86_64-linux-gnu/libgomp.so.1* \
     /usr/lib/x86_64-linux-gnu/libfmt.so.* \
     /usr/lib/x86_64-linux-gnu/libboost_program_options.so.* \
     /usr/lib/x86_64-linux-gnu/
 
 # Setup ENV variables for use with Python bindings
+ENV CHARGEFW2_DIR=/ChargeFW2/build
 ENV LD_LIBRARY_PATH=${CHARGEFW2_DIR}/lib:$LD_LIBRARY_PATH
 ENV PYTHONPATH=${CHARGEFW2_DIR}/lib
