--- a/src/deployment/docker-compose.override.yml
+++ b/src/deployment/docker-compose.override.yml
@@ -1,7 +1,7 @@
 services:
   nginx:
     ports:
-      - "80:80"
+      - "8080:80"
   db:
     ports:
       - "5432:5432"
@@ -21,7 +21,7 @@ services:
   web:
     build:
       args:
-        - VITE_BASE_API_URL=http://localhost/api/v1
+        - VITE_BASE_API_URL=http://localhost:8080/api/v1
     environment:
       NODE_ENV: development
     ports:
