--- a/src/deployment/nginx/nginx-dev.conf
+++ b/src/deployment/nginx/nginx-dev.conf
@@ -17,7 +17,7 @@ http {
 
     server {
         listen 80;
-        server_name acc2.ncbr.muni.cz;
+        server_name acc3-dev.biodata.ceitec.cz;
 
         location /api {
             proxy_pass http://api:8000;
