Rename ACC2 to ACC internally

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,7 +14,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container: 
-      image: pilatmartin/acc2-chargefw2
+      image: sbncbr/chargefw2
 
     steps:
       - name: Checkout
@@ -23,16 +23,16 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
-          apt-get update && apt-get install -y curl python3.12-dev libpq-dev gcc
+          apt-get update && apt-get install -y curl python3.13-dev libpq-dev gcc
           python -m pip install --upgrade pip
           curl -sSL https://install.python-poetry.org | python3 -
           export PATH="/github/home/.local/bin:$PATH"
           echo "$HOME/.local/bin" >> $GITHUB_PATH # allow poetry to be used in next step
-          poetry env use python3.12
+          poetry env use python3.13
           poetry install --no-interaction --no-root
         working-directory: ./src/backend
 
