--- a/src/deployment/docker-compose.prod.yml
+++ b/src/deployment/docker-compose.prod.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      ACC2_DB_URL: "postgresql://prod_user:${PROD_DB_PASSWORD}@db:5432/postgres_prod"
+      ACC_DB_URL: "postgresql://prod_user:${PROD_DB_PASSWORD}@db:5432/postgres_prod"
       OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
       OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET}
     volumes:
