--- a/src/deployment/docker-compose.yml
+++ b/src/deployment/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       context: ../backend
       dockerfile: Dockerfile
     environment:
-      ACC2_DB_URL: "postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}"
+      ACC_DB_URL: "postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-postgres}"
       CHARGEFW2_INSTALL_DIR: ${CHARGEFW2_INSTALL_DIR:-/ChargeFW2/}
     depends_on:
       db:
