--- a/src/deployment/nginx/nginx.conf
+++ b/src/deployment/nginx/nginx.conf
@@ -10,79 +10,6 @@ events {
 }
 
 http {
-    resolver 127.0.0.11 valid=30s;
-
-    client_max_body_size 260M;
-    client_body_buffer_size 260M;
-
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=calc_limit:10m rate=6r/m;
-    limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=6r/m;
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-
-    limit_req_status 429;
-
-    server {
-        server_name acc2.ncbr.muni.cz;
-
-        error_page 429 @ratelimit_error;
-        location @ratelimit_error {
-            return 429 '{"success": false, "message": "Too many requests. Please try again later."}';
-            add_header Content-Type application/json;
-        }
-
-        location /api/v1/charges/calculate {
-            limit_req zone=calc_limit;
-
-            proxy_pass http://api:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            
-            include /etc/nginx/snippets/cors_headers.conf;
-            include /etc/nginx/snippets/options_handling.conf;
-            include /etc/nginx/snippets/proxy_params.conf;
-        }
-
-        location /api/v1/files/upload {
-            limit_req zone=upload_limit;
-
-            proxy_pass http://api:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-
-            include /etc/nginx/snippets/cors_headers.conf;
-            include /etc/nginx/snippets/options_handling.conf;
-            include /etc/nginx/snippets/proxy_params.conf;
-        }
-
-        location /api {
-            limit_req zone=api_limit burst=10;
-
-            proxy_pass http://api:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            
-            include /etc/nginx/snippets/cors_headers.conf;
-            include /etc/nginx/snippets/options_handling.conf;
-            include /etc/nginx/snippets/proxy_params.conf;
-        }
-
-        location / {
-            proxy_pass http://web:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            
-            include /etc/nginx/snippets/cors_headers.conf;
-            include /etc/nginx/snippets/options_handling.conf;
-            include /etc/nginx/snippets/proxy_params.conf;
-
-        }
-
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/acc2.ncbr.muni.cz/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/acc2.ncbr.muni.cz/privkey.pem; # managed by Certbot
-}
-
     ##
     # Basic Settings
     ##
@@ -117,28 +44,93 @@ http {
 
     gzip on;
 
-    # gzip_vary on;
-    # gzip_proxied any;
-    # gzip_comp_level 6;
-    # gzip_buffers 16 8k;
-    # gzip_http_version 1.1;
-    # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    resolver 127.0.0.11 valid=30s;
 
-    ##
-    # Virtual Host Configs
-    ##
-    #include /etc/nginx/conf.d/*.conf;
-    #include /etc/nginx/sites-enabled/*;
+    client_max_body_size 260M;
+    client_body_buffer_size 260M;
 
+    # Rate limiting
+    limit_req_zone $binary_remote_addr zone=calc_limit:10m rate=6r/m;
+    limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=6r/m;
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
+    limit_req_status 429;
 
     server {
-        if ($host = acc2.ncbr.muni.cz) {
-            return 301 https://$host$request_uri;
-        } # managed by Certbot
-
-
         listen 80;
+        server_name acc.biodata.ceitec.cz acc2.ncbr.muni.cz;
+
+        return 301 https://acc.biodata.ceitec.cz$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
         server_name acc2.ncbr.muni.cz;
-        return 404; # managed by Certbot
+
+        ssl_certificate /etc/letsencrypt/live/acc2.ncbr.muni.cz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/acc2.ncbr.muni.cz/privkey.pem;
+
+        return 301 https://acc.biodata.ceitec.cz$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name acc.biodata.ceitec.cz;
+
+        ssl_certificate /etc/letsencrypt/live/acc2.ncbr.muni.cz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/acc2.ncbr.muni.cz/privkey.pem;
+
+        error_page 429 @ratelimit_error;
+        location @ratelimit_error {
+            return 429 '{"success": false, "message": "Too many requests. Please try again later."}';
+            add_header Content-Type application/json;
+        }
+
+        location /api/v1/charges/calculate {
+            limit_req zone=calc_limit;
+
+            proxy_pass http://api:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            include /etc/nginx/snippets/cors_headers.conf;
+            include /etc/nginx/snippets/options_handling.conf;
+            include /etc/nginx/snippets/proxy_params.conf;
+        }
+
+        location /api/v1/files/upload {
+            limit_req zone=upload_limit;
+
+            proxy_pass http://api:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            include /etc/nginx/snippets/cors_headers.conf;
+            include /etc/nginx/snippets/options_handling.conf;
+            include /etc/nginx/snippets/proxy_params.conf;
+        }
+
+        location /api {
+            limit_req zone=api_limit burst=10;
+
+            proxy_pass http://api:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            include /etc/nginx/snippets/cors_headers.conf;
+            include /etc/nginx/snippets/options_handling.conf;
+            include /etc/nginx/snippets/proxy_params.conf;
+        }
+
+        location / {
+            proxy_pass http://web:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            include /etc/nginx/snippets/cors_headers.conf;
+            include /etc/nginx/snippets/options_handling.conf;
+            include /etc/nginx/snippets/proxy_params.conf;
+
+        }
     }
 }
