Rename DB password variable

--- a/src/deployment/docker-compose.prod.yml
+++ b/src/deployment/docker-compose.prod.yml
@@ -19,12 +19,12 @@ services:
     environment:
       POSTGRES_DB: postgres_prod
       POSTGRES_USER: prod_user
-      POSTGRES_PASSWORD: ${PROD_DB_PASSWORD}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
   api:
     ports:
       - "8000:8000"
     environment:
-      ACC_DB_URL: "postgresql://prod_user:${PROD_DB_PASSWORD}@db:5432/postgres_prod"
+      ACC_DB_URL: "postgresql://prod_user:${DB_PASSWORD}@db:5432/postgres_prod"
       OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
       OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET}
     volumes:
