--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
             echo "Deployment target: [$DEPLOY_TARGET] from branch [$BRANCH_NAME]"
 
             echo "Setting up environment variables ..."
-            export PROD_DB_PASSWORD=${{ secrets.PROD_DB_PASSWORD }}
+            export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
             export OIDC_CLIENT_ID=${{ secrets.OIDC_CLIENT_ID }}
             export OIDC_CLIENT_SECRET=${{ secrets.OIDC_CLIENT_SECRET }}
 
