Refactor deploy pt. 2

--- a/src/deployment/docker-compose.prod.yml
+++ b/src/deployment/docker-compose.prod.yml
@@ -33,6 +33,6 @@ services:
   web:
     build:
       args:
-        VITE_BASE_API_URL: https://acc-dev.biodata.ceitec.cz:443/api/v1
+        VITE_BASE_API_URL: ${VITE_BASE_API_URL}
     ports:
       - "3000:3000"
