--- a/.github/workflows/deploy-logic.yml
+++ b/.github/workflows/deploy-logic.yml
@@ -61,6 +61,12 @@ jobs:
             export DB_PASSWORD=${{ secrets.DB_PASSWORD }} 
             export OIDC_CLIENT_ID=${{ secrets.OIDC_CLIENT_ID }}
             export OIDC_CLIENT_SECRET=${{ secrets.OIDC_CLIENT_SECRET }}
+            
+            if [ "${{ inputs.target_environment }}" = "Production" ]; then
+                export VITE_BASE_API_URL="https://acc.biodata.ceitec.cz:443/api/v1"
+            else
+                export VITE_BASE_API_URL="https://acc-dev.biodata.ceitec.cz:443/api/v1"
+            fi
 
             cd $PROJECT_ROOT
             echo "Changed directory to $(pwd)"
