--- a/.github/workflows/deploy-logic.yml
+++ b/.github/workflows/deploy-logic.yml
@@ -68,9 +68,13 @@ jobs:
 
             if [ "${{ inputs.target_environment }}" = "Production" ]; then
                 export VITE_BASE_API_URL="https://acc.biodata.ceitec.cz:443/api/v1"
+                export OIDC_BASE_URL="https://acc.biodata.ceitec.cz/"
+                export OIDC_REDIRECT_URL="https://acc.biodata.ceitec.cz/api/v1/auth/callback"
                 export NGINX_CONFIG_FILE="nginx.prod.conf"
             else
                 export VITE_BASE_API_URL="https://acc-dev.biodata.ceitec.cz:443/api/v1"
+                export OIDC_BASE_URL="https://acc-dev.biodata.ceitec.cz/"
+                export OIDC_REDIRECT_URL="https://acc-dev.biodata.ceitec.cz/api/v1/auth/callback"
                 export NGINX_CONFIG_FILE="nginx.dev.conf"
             fi
 
